sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:88: error: expected class or object definition
	def out(msg:String) {
        ^SelectBaseball:93: error: expected class or object definition
	def bringPlayersHome(base:Int) {
        ^SelectBaseball:131: error: expected class or object definition
	def findPlayerBase(start:Int, color:Int):Int = {
        ^SelectBaseball:139: error: expected class or object definition
	def findPlayerPos(base:Int, color:Int):Int = {
        ^SelectBaseball:146: error: Unmatched closing brace '}' ignored here
}
^